# DSFinalProject

./: CMakeLists.txt  README.md
backend/: btree.cpp  btree.h  canvas.cpp  canvas.h  database.cpp  database.h  download_libs.sh  main.cpp  server.cpp  server.h  sha256.cpp  sha256.h  snapshot.cpp  snapshot.h  video_export.cpp  video_export.h
frontend/: app.js  index.html  style.css
tools/: create_db  create_db.cpp
